# shibui-work-wellness-planner

./: .gitattributes
docs/: shibui-2-mvp-spec.md  shibui-2-rebuild-checklist.md
shibui_v2/: .env.example  README.md
shibui_v2/backend/: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
shibui_v2/backend/app/: config.py  main.py
shibui_v2/backend/app/api/: deps.py
shibui_v2/backend/app/api/routes/: __init__.py  auth.py  planner.py  profile.py
shibui_v2/backend/app/models/: __init__.py  reflection.py  scheduled_block.py  task_template.py  user.py  user_preferences.py
shibui_v2/backend/app/schemas/: __init__.py  auth.py  planner.py  profile.py
shibui_v2/backend/app/services/: __init__.py  auth.py  planner.py  profile.py
shibui_v2/backend/migrations/: README.md  env.py
shibui_v2/backend/migrations/versions/: 0001_initial_schema.py
shibui_v2/backend/tests/: conftest.py  test_auth_and_profile.py  test_planner_flows.py
shibui_v2/frontend/: README.md  package-lock.json  package.json  tsconfig.json
shibui_v2/frontend/app/: globals.css  layout.tsx  page.tsx
shibui_v2/frontend/app/app/: page.tsx
shibui_v2/frontend/app/login/: page.tsx
shibui_v2/frontend/app/onboarding/: page.tsx
shibui_v2/frontend/app/signup/: page.tsx
shibui_v2/frontend/components/: auth-form.tsx  auth-guard.tsx  flash-banner.tsx
shibui_v2/frontend/lib/: api.ts  auth.ts  types.ts
